should fix wrapping

--- a/src/internal/autoembed/autoembed.less
+++ b/src/internal/autoembed/autoembed.less
@@ -31,6 +31,15 @@ iframe {
 }
 
 .smart-link {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-word;
+	hyphens: auto;
+	
+	& .-icon-domain {
+		white-space: nowrap;
+	}
 	& .-domain {
 		font-weight: bold;
 		margin-left: 0.25em;
